--- a/static/style.css
+++ b/static/style.css
@@ -174,6 +174,37 @@ h1, h2, h3, p {
     padding: 0;
 }
 
+/* New */
+#charts {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.chart-title {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333; 
+}
+
+.chart-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly; 
+}
+
+.chart {
+    width: 45%; 
+    margin: 0 5px 10px 5px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.chart:hover {
+    transform: scale(1.05); 
+}
+/**/
+
 #search-results {
     margin-top: 20px;
     padding: 20px;
