--- a/templates/admin.html
+++ b/templates/admin.html
@@ -91,9 +91,8 @@
                     <select id="propertyType" name="propertyType" required>
                         <option aria-placeholder="Type">Select Type</option>
                         <option value="House">House</option>
-                        <option value="Apartment">Apartment</option>
+                        <option value="Apartment">Unit</option>
                         <option value="Condo">Condo</option>
-                        <option value="Unit">Condo</option>
                     </select>
                 </div>
                 <input type="number" id="bedrooms" name="bedrooms" placeholder="Bedrooms" required>
