--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -32,15 +32,15 @@
                     <option value="query3">Top 10 Sales by Date</option>
                     <option value="query4">Total Sales by Date</option>
                     <option value="query5">Highest Average Sales by Postcode</option>
-                    <option value="query6">Total sales by Year</option>
-                    <option value="query7">Sales Ranking by Postcode</option>
-                    <option value="query8">Properties Sold by Years</option>
-                    <option value="query9">Average Price by Property Type over Years</option>
-                    <option value="query10">Average Price by Property Type and Bedroom</option>
-                    <option value="query11">Sold Properties by Property Type and Bedroom</option>
-                    <option value="query12">Minimum Price of Property by Bedroom</option>
-                    <option value="query13">Sales by Month over Years</option>
-                    <option value="query14">Average Price by Bedrooms</option>
+                    <option value="query6">Total Sales by Year</option>
+                    <option value="query7">Annual Sales Ranking by Postcode</option>
+                    <option value="query8">Property Type Sales by Years</option>
+                    <option value="query9">Average Property Type Price by Years</option>
+                    <option value="query10">Average Price by Property Type and Number of Bedrooms</option>
+                    <option value="query11">Total Sales by Property Type and Number of Bedroom</option>
+                    <option value="query12">Minimum Property Price by Number of Bedrooms</option>
+                    <option value="query13">Monthly Sales by Year</option>
+                    <option value="query14">Average Price by Number of Bedrooms</option>
                     <!-- Add more options as needed -->
                 </select>
                 <input type="submit" value="Search">
